--- a/index.html
+++ b/index.html
@@ -2,42 +2,16 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Jakob Maps</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <style>
-    #map {
-      height: 700px;
-      width: 90%;
-      margin: 30px auto;
-      border-radius: 10px;
-      border: 2px solid #555;
-    }
-    body {
-      text-align: center;
-      font-family: Arial, sans-serif;
-    }
-  </style>
+  <title>Årets gång</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Jakob Maps</h1>
-  <p></p>
-  <div id="map"></div>
+  <h1>📅 Hur mycket av året har gått?</h1>
+  <div class="progress-container">
+    <div id="progress-bar"></div>
+  </div>
+  <p id="progress-text"></p>
 
-  <script>
-    const map = L.map('map').setView([60.6749, 17.1413], 12); // Gävle
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap',
-      maxZoom: 19
-    }).addTo(map);
-
-    map.on('click', function(e) {
-      const { lat, lng } = e.latlng;
-      L.marker([lat, lng]).addTo(map)
-        .bindPopup(`Lat: ${lat.toFixed(4)}, Lon: ${lng.toFixed(4)}`)
-        .openPopup();
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
