--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         </div>
 
         <div class="col" style="margin-left:auto;">
-          <label><input id="showAnswer" type="checkbox" checked> Visa facit (summa / klockslag)</label>
+          <!-- DEFAULT: AVBOCKAD -->
+          <label><input id="showAnswer" type="checkbox"> Visa facit (summa / klockslag)</label>
           <div class="hint">Ljud spelas när du trycker på knappar (webbläsare kräver användarklick).</div>
         </div>
       </div>
@@ -95,7 +96,7 @@
         <div class="vizTop">
           <div class="vizInfo" id="vizTitle">—</div>
           <div class="row">
-            <span class="pill" id="answerPill">Facit: —</span>
+            <span class="pill" id="answerPill">Facit: (dolt)</span>
             <button class="secondary" id="fullscreenBtn">Helskärm</button>
             <button class="secondary" id="backBtn">Tillbaka</button>
           </div>
@@ -124,7 +125,7 @@
 (() => {
   // ---------- State ----------
   let mode = "dice";
-  let showAnswer = true;
+  let showAnswer = document.getElementById("showAnswer").checked;
 
   // Dice state
   let diceN = 2;
@@ -178,7 +179,7 @@
     try {
       audioEl.pause();
       audioEl.currentTime = 0;
-      audioEl.play().catch(()=>{ /* ignore autoplay issues */ });
+      audioEl.play().catch(()=>{});
     } catch {}
   }
 
@@ -205,6 +206,13 @@
 
   showAnswerEl.addEventListener("change", () => {
     showAnswer = !!showAnswerEl.checked;
+    // uppdatera pill direkt
+    if (!vizCard.classList.contains("hidden")) {
+      if (mode === "dice") setFacit(String(diceValues.reduce((a,b)=>a+b,0)));
+      else setFacit(formatTime(clockTime));
+    } else {
+      setFacit("—");
+    }
   });
 
   numDiceEl.addEventListener("change", () => {
@@ -229,8 +237,14 @@
     else startClockView();
   });
 
-  backBtn.addEventListener("click", () => {
+  // FIX: lämna fullscreen innan vi går tillbaka (annars kan UI "låsa")
+  backBtn.addEventListener("click", async () => {
     stopAllAnimations();
+
+    if (document.fullscreenElement) {
+      try { await document.exitFullscreen(); } catch {}
+    }
+
     setupCard.classList.remove("hidden");
     vizCard.classList.add("hidden");
   });
@@ -267,7 +281,7 @@
     stopAllAnimations();
     playAudio(diceAudio);
 
-    const duration = 900; // ms
+    const duration = 2000; // ms
     const start = performance.now();
     const final = Array.from({length: diceN}, () => randInt(1,6));
 
@@ -275,43 +289,47 @@
       const p = clamp((t - start)/duration, 0, 1);
       const ease = 1 - (1 - p)*(1 - p);
 
-      // under animation: slumpa snabbt + jitter som minskar
-      if (p < 1) {
-        diceValues = Array.from({length: diceN}, () => randInt(1,6));
-      } else {
-        diceValues = final;
-      }
+      if (p < 1) diceValues = Array.from({length: diceN}, () => randInt(1,6));
+      else diceValues = final;
 
-      redraw({ diceJitter: (1 - ease) });
+      // jitter + bounce
+      const jitter = (1 - ease);
+      const bounce = Math.abs(Math.sin(p * Math.PI * 3)) * (1 - ease);
+
+      redraw({ diceJitter: jitter, diceBounce: bounce });
 
       if (p < 1) diceAnim = requestAnimationFrame(frame);
       else {
         diceAnim = null;
         setFacit(String(diceValues.reduce((a,b)=>a+b,0)));
+        redraw(); // final crisp redraw
       }
     }
     diceAnim = requestAnimationFrame(frame);
   }
 
-  function drawDie(x, y, size, value, jitterScale) {
-    const j = (size * 0.08) * jitterScale;
+  function drawDie(x, y, size, value, jitterScale, bounceScale) {
+    const j = (size * 0.08) * (jitterScale || 0);
     const dx = (Math.random()*2 - 1) * j;
     const dy = (Math.random()*2 - 1) * j;
 
+    const b = (size * 0.14) * (bounceScale || 0); // studs uppåt
+    const dy2 = dy - b;
+
     // shadow
     ctx.fillStyle = "rgba(0,0,0,0.07)";
-    roundRect(x+6+dx, y+6+dy, size, size, size*0.12, true, false);
+    roundRect(x+6+dx, y+6+dy2, size, size, size*0.12, true, false);
 
     // body
     ctx.fillStyle = "white";
     ctx.strokeStyle = "black";
     ctx.lineWidth = Math.max(2, size/40);
-    roundRect(x+dx, y+dy, size, size, size*0.12, true, true);
+    roundRect(x+dx, y+dy2, size, size, size*0.12, true, true);
 
     // pips
     const margin = size * 0.22;
     const cx = [x+dx+margin, x+dx+size/2, x+dx+size-margin];
-    const cy = [y+dy+margin, y+dy+size/2, y+dy+size-margin];
+    const cy = [y+dy2+margin, y+dy2+size/2, y+dy2+size-margin];
     const r = Math.max(2, size*0.06);
 
     const pips = {
@@ -341,7 +359,9 @@
     let rows = Math.ceil(n / cols);
 
     const base = Math.min(w, h);
-    const gap = Math.max(16, base * 0.03);
+
+    // ÖKAD SPACING
+    const gap = Math.max(24, base * 0.04);
     const margin = Math.max(12, base * 0.05);
 
     const size = Math.floor(Math.min(
@@ -408,7 +428,6 @@
   function newClockTimeAnimated() {
     stopAllAnimations();
 
-    // ljud max 2 sek
     playAudio(clockAudio);
     if (clockStopTimer) clearTimeout(clockStopTimer);
     clockStopTimer = setTimeout(() => stopAudio(clockAudio), 2000);
@@ -520,13 +539,12 @@
       const L = layoutDice();
       const n = diceN;
       const cols = L.cols;
-      const rows = Math.ceil(n/cols);
 
-      // block centering
       const fullRows = Math.floor(n / cols);
       const lastCount = n % cols;
 
       const jitterScale = (opts.diceJitter ?? 0);
+      const bounceScale = (opts.diceBounce ?? 0);
 
       for (let i=0; i<n; i++) {
         const row = Math.floor(i/cols);
@@ -540,7 +558,7 @@
 
         const x = rowBaseX + col*(L.dieSize + L.gap);
         const y = L.baseY + row*(L.dieSize + L.gap);
-        drawDie(x, y, L.dieSize, diceValues[i] ?? 1, jitterScale);
+        drawDie(x, y, L.dieSize, diceValues[i] ?? 1, jitterScale, bounceScale);
       }
     } else {
       drawClock();
