--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
         <div class="vizBottom">
           <button id="actionBtn">—</button>
+          <button class="secondary" id="surpriseBtn">Överraskning 🎁</button>
         </div>
       </div>
     </div>
@@ -138,6 +139,10 @@
   let clockAngles = { hour: -Math.PI/2, min: -Math.PI/2 };
   let clockAnim = null;
 
+  // Surprise state (endast: magic + freeze)
+  let surpriseAnim = null;
+  let surpriseState = { type: null, t0: 0, duration: 0, magicIndex: 0 };
+
   // ---------- Elements ----------
   const setupCard = document.getElementById("setupCard");
   const vizCard = document.getElementById("vizCard");
@@ -148,6 +153,7 @@
   const backBtn = document.getElementById("backBtn");
   const fullscreenBtn = document.getElementById("fullscreenBtn");
   const actionBtn = document.getElementById("actionBtn");
+  const surpriseBtn = document.getElementById("surpriseBtn");
 
   const showAnswerEl = document.getElementById("showAnswer");
   const numDiceEl = document.getElementById("numDice");
@@ -166,6 +172,7 @@
 
   // ---------- Helpers ----------
   function clamp(v, a, b){ return Math.max(a, Math.min(b, v)); }
+  function randInt(a,b){ return Math.floor(Math.random()*(b-a+1))+a; }
 
   function resizeCanvasToContainer() {
     const rect = canvasContainer.getBoundingClientRect();
@@ -195,6 +202,19 @@
     answerPill.textContent = "Facit: " + text;
   }
 
+  function stopAllAnimations() {
+    if (diceAnim) cancelAnimationFrame(diceAnim);
+    if (clockAnim) cancelAnimationFrame(clockAnim);
+    diceAnim = null;
+    clockAnim = null;
+  }
+
+  function stopSurprise() {
+    if (surpriseAnim) cancelAnimationFrame(surpriseAnim);
+    surpriseAnim = null;
+    surpriseState.type = null;
+  }
+
   // ---------- UI wiring ----------
   document.querySelectorAll('input[name="mode"]').forEach(r => {
     r.addEventListener("change", () => {
@@ -206,7 +226,6 @@
 
   showAnswerEl.addEventListener("change", () => {
     showAnswer = !!showAnswerEl.checked;
-    // uppdatera pill direkt
     if (!vizCard.classList.contains("hidden")) {
       if (mode === "dice") setFacit(String(diceValues.reduce((a,b)=>a+b,0)));
       else setFacit(formatTime(clockTime));
@@ -233,6 +252,8 @@
     vizCard.classList.remove("hidden");
 
     resizeCanvasToContainer();
+    stopAllAnimations();
+    stopSurprise();
     if (mode === "dice") startDiceView();
     else startClockView();
   });
@@ -240,6 +261,7 @@
   // FIX: lämna fullscreen innan vi går tillbaka (annars kan UI "låsa")
   backBtn.addEventListener("click", async () => {
     stopAllAnimations();
+    stopSurprise();
 
     if (document.fullscreenElement) {
       try { await document.exitFullscreen(); } catch {}
@@ -266,6 +288,14 @@
     }
   });
 
+  // Surprise button (endast 2 effekter)
+  surpriseBtn.addEventListener("click", () => {
+    stopAllAnimations();
+    stopSurprise();
+    if (mode === "dice") runMagicDice();
+    else runFreeze();
+  });
+
   // ---------- Dice ----------
   function startDiceView() {
     vizTitle.textContent = "Tärningar";
@@ -279,9 +309,10 @@
 
   function rollDiceAnimated() {
     stopAllAnimations();
+    stopSurprise();
     playAudio(diceAudio);
 
-    const duration = 2000; // ms
+    const duration = 950; // ms
     const start = performance.now();
     const final = Array.from({length: diceN}, () => randInt(1,6));
 
@@ -292,7 +323,6 @@
       if (p < 1) diceValues = Array.from({length: diceN}, () => randInt(1,6));
       else diceValues = final;
 
-      // jitter + bounce
       const jitter = (1 - ease);
       const bounce = Math.abs(Math.sin(p * Math.PI * 3)) * (1 - ease);
 
@@ -302,13 +332,13 @@
       else {
         diceAnim = null;
         setFacit(String(diceValues.reduce((a,b)=>a+b,0)));
-        redraw(); // final crisp redraw
+        redraw();
       }
     }
     diceAnim = requestAnimationFrame(frame);
   }
 
-  function drawDie(x, y, size, value, jitterScale, bounceScale) {
+  function drawDie(x, y, size, value, jitterScale, bounceScale, popScale) {
     const j = (size * 0.08) * (jitterScale || 0);
     const dx = (Math.random()*2 - 1) * j;
     const dy = (Math.random()*2 - 1) * j;
@@ -316,21 +346,29 @@
     const b = (size * 0.14) * (bounceScale || 0); // studs uppåt
     const dy2 = dy - b;
 
+    const pop = (popScale || 0); // 0..1
+    const scale = 1 + 0.10 * pop; // liten "pop"
+    const s2 = size * scale;
+
+    // centrera skalning runt die
+    const px = x - (s2 - size)/2;
+    const py = y - (s2 - size)/2;
+
     // shadow
     ctx.fillStyle = "rgba(0,0,0,0.07)";
-    roundRect(x+6+dx, y+6+dy2, size, size, size*0.12, true, false);
+    roundRect(px+6+dx, py+6+dy2, s2, s2, s2*0.12, true, false);
 
     // body
     ctx.fillStyle = "white";
     ctx.strokeStyle = "black";
-    ctx.lineWidth = Math.max(2, size/40);
-    roundRect(x+dx, y+dy2, size, size, size*0.12, true, true);
+    ctx.lineWidth = Math.max(2, s2/40);
+    roundRect(px+dx, py+dy2, s2, s2, s2*0.12, true, true);
 
     // pips
-    const margin = size * 0.22;
-    const cx = [x+dx+margin, x+dx+size/2, x+dx+size-margin];
-    const cy = [y+dy2+margin, y+dy2+size/2, y+dy2+size-margin];
-    const r = Math.max(2, size*0.06);
+    const margin = s2 * 0.22;
+    const cx = [px+dx+margin, px+dx+s2/2, px+dx+s2-margin];
+    const cy = [py+dy2+margin, py+dy2+s2/2, py+dy2+s2-margin];
+    const r = Math.max(2, s2*0.06);
 
     const pips = {
       1: [[1,1]],
@@ -354,14 +392,13 @@
     const h = canvas.height / (window.devicePixelRatio || 1);
     const n = diceN;
 
-    // välj grid nära kvadrat
     let cols = Math.ceil(Math.sqrt(n));
     let rows = Math.ceil(n / cols);
 
     const base = Math.min(w, h);
 
     // ÖKAD SPACING
-    const gap = Math.max(24, base * 0.04);
+    const gap = Math.max(26, base * 0.045);
     const margin = Math.max(12, base * 0.05);
 
     const size = Math.floor(Math.min(
@@ -370,13 +407,33 @@
     ));
     const dieSize = clamp(size, 60, 700);
 
-    // block size and centering
     const blockW = cols*dieSize + (cols-1)*gap;
     const blockH = rows*dieSize + (rows-1)*gap;
     const baseX = (w - blockW)/2;
     const baseY = (h - blockH)/2;
 
     return { w, h, cols, rows, gap, margin, dieSize, baseX, baseY };
+  }
+
+  // --- Surprise: Magic Dice ---
+  function runMagicDice() {
+    if (diceN <= 0) return;
+
+    // liten “tada”: välj en tärning
+    surpriseState = {
+      type: "magic",
+      t0: performance.now(),
+      duration: 900,
+      magicIndex: randInt(0, diceN - 1)
+    };
+
+    function frame(t) {
+      const p = clamp((t - surpriseState.t0)/surpriseState.duration, 0, 1);
+      redraw({ surprise: surpriseState, surpriseP: p });
+      if (p < 1) surpriseAnim = requestAnimationFrame(frame);
+      else stopSurprise();
+    }
+    surpriseAnim = requestAnimationFrame(frame);
   }
 
   // ---------- Clock ----------
@@ -427,6 +484,7 @@
 
   function newClockTimeAnimated() {
     stopAllAnimations();
+    stopSurprise();
 
     playAudio(clockAudio);
     if (clockStopTimer) clearTimeout(clockStopTimer);
@@ -473,7 +531,6 @@
     const cx = w/2, cy = h/2;
     const r = size * 0.42;
 
-    // face
     ctx.fillStyle = "white";
     ctx.strokeStyle = "black";
     ctx.lineWidth = 3;
@@ -482,7 +539,6 @@
     ctx.fill();
     ctx.stroke();
 
-    // markers + numbers (12 up)
     for (let i=0; i<12; i++) {
       const ang = -Math.PI/2 + i*(Math.PI*2/12);
       const x1 = cx + (r*0.88)*Math.cos(ang);
@@ -504,9 +560,9 @@
       ctx.fillText(String(num), tx, ty);
     }
 
-    // hour hand
     ctx.strokeStyle = "#111";
     ctx.lineCap = "round";
+
     ctx.lineWidth = Math.max(4, r/18);
     ctx.beginPath();
     ctx.moveTo(cx, cy);
@@ -514,7 +570,6 @@
                cy + (r*0.55)*Math.sin(clockAngles.hour));
     ctx.stroke();
 
-    // minute hand
     ctx.lineWidth = Math.max(3, r/24);
     ctx.beginPath();
     ctx.moveTo(cx, cy);
@@ -522,11 +577,23 @@
                cy + (r*0.80)*Math.sin(clockAngles.min));
     ctx.stroke();
 
-    // center dot
     ctx.fillStyle = "#111";
     ctx.beginPath();
     ctx.arc(cx, cy, 6, 0, Math.PI*2);
     ctx.fill();
+  }
+
+  // --- Surprise: Freeze ---
+  function runFreeze() {
+    surpriseState = { type: "freeze", t0: performance.now(), duration: 900, magicIndex: 0 };
+
+    function frame(t) {
+      const p = clamp((t - surpriseState.t0)/surpriseState.duration, 0, 1);
+      redraw({ surprise: surpriseState, surpriseP: p });
+      if (p < 1) surpriseAnim = requestAnimationFrame(frame);
+      else stopSurprise();
+    }
+    surpriseAnim = requestAnimationFrame(frame);
   }
 
   // ---------- Rendering ----------
@@ -546,6 +613,12 @@
       const jitterScale = (opts.diceJitter ?? 0);
       const bounceScale = (opts.diceBounce ?? 0);
 
+      // magic settings
+      const s = opts.surprise;
+      const sp = opts.surpriseP;
+      const isMagic = (s && s.type === "magic" && sp != null);
+      const magicIdx = isMagic ? s.magicIndex : -1;
+
       for (let i=0; i<n; i++) {
         const row = Math.floor(i/cols);
         const col = i % cols;
@@ -558,21 +631,94 @@
 
         const x = rowBaseX + col*(L.dieSize + L.gap);
         const y = L.baseY + row*(L.dieSize + L.gap);
-        drawDie(x, y, L.dieSize, diceValues[i] ?? 1, jitterScale, bounceScale);
+
+        // pop scale for magic die (snabbt upp, sen ner)
+        let pop = 0;
+        if (isMagic && i === magicIdx) {
+          const up = Math.sin(sp * Math.PI); // 0..1..0
+          pop = up;
+        }
+
+        drawDie(x, y, L.dieSize, diceValues[i] ?? 1, jitterScale, bounceScale, pop);
       }
     } else {
       drawClock();
     }
+
+    // overlays
+    if (opts.surprise && opts.surpriseP != null) {
+      drawSurpriseOverlay(opts.surprise, opts.surpriseP);
+    }
   }
 
-  function stopAllAnimations() {
-    if (diceAnim) cancelAnimationFrame(diceAnim);
-    if (clockAnim) cancelAnimationFrame(clockAnim);
-    diceAnim = null;
-    clockAnim = null;
-  }
+  function drawSurpriseOverlay(s, p) {
+    const w = canvas.width / (window.devicePixelRatio || 1);
+    const h = canvas.height / (window.devicePixelRatio || 1);
 
-  function randInt(a,b){ return Math.floor(Math.random()*(b-a+1))+a; }
+    if (s.type === "freeze") {
+      // Frost overlay (mild, snabbt)
+      const strength = 0.22 * (1 - Math.abs(0.5 - p)*2); // peak i mitten
+      ctx.save();
+      ctx.globalAlpha = strength;
+      ctx.fillStyle = "#6aa9ff";
+      ctx.fillRect(0,0,w,h);
+
+      // små iskristaller
+      ctx.globalAlpha = strength * 0.9;
+      ctx.fillStyle = "#ffffff";
+      const count = 90;
+      for (let i=0; i<count; i++) {
+        const x = (Math.random()*w);
+        const y = (Math.random()*h);
+        const r = 1 + Math.random()*2.2;
+        ctx.beginPath();
+        ctx.arc(x, y, r, 0, Math.PI*2);
+        ctx.fill();
+      }
+      ctx.restore();
+      return;
+    }
+
+    if (mode === "dice" && s.type === "magic") {
+      const L = layoutDice();
+      const i = s.magicIndex;
+
+      const cols = L.cols;
+      const row = Math.floor(i/cols);
+      const col = i % cols;
+
+      const n = diceN;
+      const fullRows = Math.floor(n / cols);
+      const lastCount = n % cols;
+
+      let rowBaseX = L.baseX;
+      if (lastCount !== 0 && row === fullRows) {
+        const lastW = lastCount * L.dieSize + (lastCount - 1) * L.gap;
+        rowBaseX = (L.w - lastW)/2;
+      }
+
+      const x = rowBaseX + col*(L.dieSize + L.gap);
+      const y = L.baseY + row*(L.dieSize + L.gap);
+
+      // glow box + "sparkles"
+      const alpha = 0.55 * (1 - p);
+      ctx.save();
+      ctx.globalAlpha = alpha;
+      ctx.strokeStyle = "#ffd54a";
+      ctx.lineWidth = Math.max(3, L.dieSize/18);
+      roundRect(x-10, y-10, L.dieSize+20, L.dieSize+20, L.dieSize*0.18, false, true);
+
+      // sparkles
+      ctx.globalAlpha = alpha * 0.9;
+      ctx.fillStyle = "#ffd54a";
+      for (let k=0; k<18; k++) {
+        const sx = x + Math.random()*L.dieSize;
+        const sy = y + Math.random()*L.dieSize;
+        ctx.fillRect(sx, sy, 2, 2);
+      }
+      ctx.restore();
+    }
+  }
 
   function roundRect(x, y, w, h, r, fill, stroke) {
     r = Math.min(r, w/2, h/2);
